--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Fulin Li"
 title_separator          : "-"
 name                     : &name "Fulin Li"
-description              : &description "PhD Student in the Joint Program in Financial Economics"
+description              : &description "PhD Student in Financial Economics"
 url                      : https://lifulin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lifulin.github.io"
