--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Fulin Li"
   avatar           : "profile.png"
-  bio              : "PhD Student in the Joint Program in Financial Economics"
+  bio              : "PhD Student in Financial Economics"
   location         : # "University of Chicago Booth School of Business"
   employer         : "University of Chicago"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
