--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Fulin Li"
-  avatar           : "profile.png"
+  avatar           : "lifulin.png"
   bio              : "PhD Student in Financial Economics"
   location         : # "University of Chicago Booth School of Business"
   employer         : "University of Chicago"
