--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Fulin Li"
 title_separator          : "-"
 name                     : &name "Fulin Li"
-description              : &description "PhD Student in Financial Economics"
+description              : &description "Ph.D. Candidate in Financial Economics"
 url                      : https://lifulin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lifulin.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Fulin Li"
   avatar           : "lifulin.png"
-  bio              : "PhD Student in Financial Economics"
+  bio              : "Ph.D. Candidate in Financial Economics"
   location         : # "University of Chicago Booth School of Business"
   employer         : "University of Chicago"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
