--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ph.D. Candidate in Financial Economics"
-title_separator          : "|"
+title                    : "Fulin Li"
+title_separator          : "-"
 name                     : &name "Fulin Li"
 description              : &description "Ph.D. Candidate in Financial Economics"
 url                      : https://lifulin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
