--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "Fulin Li"
-title_separator          : "-"
+title_separator          : "|"
 name                     : &name "Fulin Li"
 description              : &description "Ph.D. Candidate in Financial Economics"
 url                      : https://lifulin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -48,6 +48,7 @@ staticman:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
   path                   : # blank (default) uses feed.xml
+  hide                   : true
 
 # SEO Related
 google_site_verification :
@@ -261,16 +262,16 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 # Plugins
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
+#  - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
+#  - jekyll-feed
   - jekyll-redirect-from
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
-  - jekyll-sitemap
+#  - jekyll-sitemap
   - jekyll-gist
-  - jekyll-feed
+#  - jekyll-feed
   - jemoji
 
 
