--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,5 @@ main:
   - title: "Research"
     url: /research/    
 
-#  - title: "Teaching"
-#    url: 
+  - title: "Teaching"
+    url: /teaching/
