--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Home"
     url: /about/   
 
-#  - title: "CV"
-#    url: /cv/
+  - title: "CV"
+    url: /cv/
 
   - title: "Research"
     url: /research/    
