--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   - title: "Home"
     url: /about/   
 
-#  - title: "CV"
-#    url: /cv/
-
   - title: "Research"
     url: /research/    
 
   - title: "Teaching"
     url: /teaching/
+
+  - title: "CV"
+    url: /cv/
