--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "fulin-li-b3513b147"
+  linkedin         : #"fulin-li-b3513b147"
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
