--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanran Guo"
-  avatar           : "lifulin.png"
+  avatar           : "profilephoto.PNG"
   bio              : "Ph.D. Candidate in Economics"
   location         : # "University of North Carolina at Chapel Hill"
   employer         : "University of North Carolina at Chapel Hill"
