--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   avatar           : "profilephoto.PNG"
   bio              : "Ph.D. Candidate in Economics"
   location         : # "University of North Carolina at Chapel Hill"
-  employer         : "University of North Carolina"  "at Chapel Hill"
+  employer         : "UNC-Chapel Hill"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "https://scholar.google.com/citations?user=RCW2eTAAAAAJ&hl=en&authuser=2"
   email            : "yanran@live.unc.edu"
