--- a/_config.yml
+++ b/_config.yml
@@ -221,6 +221,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
+  # _outsideeconomics
+  - scope:
+      path: ""
+      type: outsideeconomics
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
   # _publications
   - scope:
       path: ""
