--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Teaching"
     url: /teaching/
+    
+  - title: "Code"
+    url: /code/
 
   - title: "Outside Economics"
     url: /outsideeconomics/
