--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/
     
-  - title: "Code"
-    url: /code/
+  - title: "Codes"
+    url: /codes/
 
   - title: "Others"
     url: /outsideeconomics/
