--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yanran Guo"
 title_separator          : "-"
 logo                     : ""
 name                     : &name "Yanran Guo"
-description              : &description "Ph.D. Candidate in Economics"
+description              : &description "Ph.D. student in Economics"
 url                      : https://yanranecon.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yanranecon.github.io"
