--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 author:
   name             : "Yanran Guo"
   avatar           : "profilephoto.PNG"
-  bio              : "Ph.D. Candidate in Economics"
+  bio              : "Ph.D. Student in Economics"
   location         : # "University of North Carolina at Chapel Hill"
   employer         : "UNC-Chapel Hill"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
