--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yanran Guo"
 title_separator          : "-"
 logo                     : ""
 name                     : &name "Yanran Guo"
-description              : &description "Ph.D. student in Economics"
+description              : &description "Lecturer"
 url                      : https://yanranecon.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yanranecon.github.io"
@@ -84,12 +84,12 @@ analytics:
 author:
   name             : "Yanran Guo"
   avatar           : "profilephoto.PNG"
-  bio              : "Ph.D. Student in Economics"
-  location         : # "University of North Carolina at Chapel Hill"
-  employer         : "UNC-Chapel Hill"
+  bio              : "Lecturer"
+  location         : # "University of Queensland"
+  employer         : "University of Queensland"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "https://scholar.google.com/citations?user=RCW2eTAAAAAJ&hl=en&authuser=2"
-  email            : "yanran@live.unc.edu"
+  email            : "yanran.guo@uq.edu.au"
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
