--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Yanran Guo"
-  avatar           : "uqphoto.JPG"
+  avatar           : "uqphoto2.JPG"
   bio              : "Lecturer"
   location         : # "University of Queensland"
   employer         : "University of Queensland"
