--- a/_config.yml
+++ b/_config.yml
@@ -84,12 +84,12 @@ analytics:
 author:
   name             : "Yanran Guo"
   avatar           : "uqphoto.JPG"
-  bio              : "Lecturer"
-  location         : # "University of Queensland"
-  employer         : "University of Queensland"
+  bio              : "Assistant Professor"
+  location         : "Toronto, Canada"
+  employer         : "York University"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : # "https://scholar.google.com/citations?user=RCW2eTAAAAAJ&hl=en&authuser=2"
-  email            : "yanran.guo@uq.edu.au"
+  email            : "gyr123@gmail.com"
   researchgate     : # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
